# cuda-audiofx-processor

./: .gitignore  README.md
cuda_fx_modeler/: CMakeLists.txt
cuda_fx_modeler/src/: CMakeLists.txt  fx_performance_test.cu  main.cpp  test.cpp
cuda_fx_modeler/src/audio/: CMakeLists.txt  fx.hpp  jack_driver_async.cpp  signal_generator.hpp  signal_graph.cpp
cuda_fx_modeler/src/cuda/: CMakeLists.txt  fx_conv_fd.cu  fx_gate.cu  fx_map.cu  gpu_fx.cuh  gpu_signal_graph.cu  gpu_signal_graph.cuh
cuda_fx_modeler/src/eval/: CMakeLists.txt  gpu_fx_eval.cu  gpu_fx_eval.cuh
cuda_fx_modeler/src/utils/: CMakeLists.txt  enums.cpp  evaluator.hpp  log.cpp  log.hpp  path.hpp
cuda_fx_modeler/src/utils_cuda/: CMakeLists.txt  block_buffer.cu  buffer.cu  buffer.cuh  coding.cu  coding.cuh  cuda_ext.cu  gpu.cuh  kernels.cu  kernels.cuh  operators.cuh  rmsd.cu  rmsd.cuh
cuda_fx_processor/: CMakeLists.txt
cuda_fx_processor/src/: CMakeLists.txt  fx_performance_test.cu  main.cpp  signal_graph_performance_test.cu  test.cpp
cuda_fx_processor/src/audio/: CMakeLists.txt  driver.hpp  file_driver.cpp  jack_driver.cpp  signal.cpp  signal.hpp  signal_driver.cpp  signal_generator.cpp  signal_graph.cpp  signal_graph.hpp
cuda_fx_processor/src/audio_cuda/: CMakeLists.txt  fx_conv_fd.cu  fx_eq.cu  fx_gate.cu  fx_map.cu  fx_nam.cu  fx_trt.cu  fx_util.cu  gpu_fx.cu  gpu_fx.cuh  gpu_signal_graph.cu  onnx_trt_engine_nam.cuh  onnx_trt_engine_yolo.cuh
cuda_fx_processor/src/eval/: CMakeLists.txt  gpu_signal_graph_eval.cu  gpu_signal_graph_eval.cuh  kernel_eval.cuh  kernel_vector_load_eval.cuh
cuda_fx_processor/src/trt/: CMakeLists.txt  onnx_parser.cu  onnx_parser.cuh  trt_engine.cu  trt_engine.cuh
cuda_fx_processor/src/utils/: CMakeLists.txt  convert.cpp  convert.hpp  enums.hpp  global.hpp  math_ext.cpp  math_ext.hpp  path.cpp  ringbuffer.cpp  ringbuffer.hpp
cuda_fx_processor/src/utils_cuda/: CMakeLists.txt  block_buffer.cuh  cuda_ext.cu  cuda_ext.cuh  gpu.cu  kernels.cu  kernels.cuh
docker/cuda-12.3.2-devel-ubuntu/: Dockerfile  docker-compose.yml
docker/jetpack-5.1.2/: Dockerfile  create-base-image.sh  docker-compose.yml
python/: cumulative_probability.py  path.py  rmsd.py
res/models/: nam_convnet_BDH5169_pedal_amp_E400.onnx  nam_convnet_BDHIII_pedal_amp_E400.onnx  nam_convnet_RevC_pedal_amp_E400.onnx  nam_convnet_pedal_amp.onnx
scripts/: audio-device-info.sh  enable-cuda-debug.sh  install-cmake.sh  ip-link-client.sh  ip-link-host.sh  jchillout.sh  jetson-system-info.sh  run_jack.sh  run_jetson.sh  setup-docker-vnc-server.sh  setup_jack.sh  test_jack.sh
